package seedu.healthbud.exception;

public class InvalidBmiException extends Exception {
    public InvalidBmiException(String message) {
        super(message);
    }
}
